# koshiba-1992-edge-fem-waveguides

./: .gitignore  .markdownlint.json  AGENTS.md  CITATION.cff  CMakeLists.txt  README.md  TODO.md
app/: mini_case.cpp  validation_case.cpp
data/input/: mini_case.cfg
data/input/reference/: README.md
docs/: 00_resumo.md  01_introducao.md  02_equacoes_basicas.md  03_formulacao_elementos_finitos.md  04_exemplos_numericos.md  05_conclusao.md  06_apendice.md  07_referencias.md  08_notas_editoriais_e_cientificas.md  09_maxwell_para_equacao_01.md  09_notas_editoriais_e_cientificas.md  10_equacao_01_para_funcional_06.md  11_origem_do_fator_j_equacao_07.md  12_funcoes_de_forma_nodais_e_de_aresta.md  13_revisao_das_integrais_do_apendice.md  14_integrais_cruzadas_e_termos_ausentes.md  15_testes_matematicos_minimos.md  16_contrato_para_implementacao_cpp.md  17_implementacao_fase7_solver_beta.md  18_politica_pec_pmc.md  19_auditoria_sinais_acoplamentos.md  20_dossie_casos_validacao_figuras.md  21_relatorio_validacao_atual.md  README.md
examples/microstrip/: fig3_microstrip.geo  fig3a.cfg  fig3b.cfg
examples/rectangular_dielectric_waveguide/: fig5_rectangular_dielectric.geo  fig5a.cfg  fig5b.cfg  fig5c.cfg
examples/triangular_core_waveguide/: fig7_triangular_core.geo  fig7a.cfg  fig7b.cfg
include/koshiba/algebra/: mode_tracking.hpp  reduced_eigenproblem.hpp
include/koshiba/fem/: beta_solver.hpp  direct_frequency_solver.hpp  edge_shape.hpp  global_assembly.hpp  local_integrals.hpp
include/koshiba/io/: gmsh.hpp
include/koshiba/mesh/: edge.hpp  mesh.hpp  node.hpp  triangle.hpp
include/koshiba/physics/: material.hpp  normalization.hpp
include/koshiba/validation/: validation_quantities.hpp
scripts/plot/: compare_validation.py  plot_mini_case.py  plot_validation.py
scripts/run/: generate_meshes.sh  run_all_validation.sh  run_mini_case.sh
src/algebra/: mode_tracking.cpp  reduced_eigenproblem.cpp
src/fem/: beta_solver.cpp  direct_frequency_solver.cpp  edge_shape.cpp  global_assembly.cpp  local_integrals.cpp
src/io/: gmsh.cpp
src/mesh/: mesh.cpp  triangle.cpp
src/physics/: material.cpp  normalization.cpp
src/validation/: validation_quantities.cpp
tests/: assembly_and_solver_tests.cpp  beta_solver_tests.cpp  check_csv_header.cmake  check_validation_csv_headers.cmake  check_validation_fig3_units.cmake  fem_shape_integral_tests.cpp  global_assembly_tests.cpp  gmsh_reader_tests.cpp  material_region_and_direct_solver_tests.cpp  mesh_connectivity_tests.cpp  reduced_eigenproblem_tests.cpp  triangle_geometry_tests.cpp  validation_quantities_tests.cpp
tests/fixtures/: two_triangles_msh41.msh
